--- a/DirectoriosFinitos/index.html
+++ b/DirectoriosFinitos/index.html
@@ -472,7 +472,7 @@
 /home/usuario/documentos/
 /home/usuario/imagenes/
 </code></pre>
-<p><img alt="Directorios" src="/Ejercicio1/imgs/Directorios.jpg" /></p>
+<p><img alt="Directorios" src="../imgs/Directorios.jpg" /></p>
 
 
 
