--- a/Manifest/index.html
+++ b/Manifest/index.html
@@ -415,7 +415,7 @@
 <li><code>xmlns:android</code>, con el que podemos definir atributos específicos de <em>Android</em> ( android:) en el documento, que sirven para definir el comportamiento de la aplicación y su interacción con el sistema. Además, nos permite definir información relacionada con los componentes (actividades, servicios, etc.).</li>
 <li><code>xmlns:toolsNos</code> permite utilizar ciertas herramientas de depuración y ayuda del IDE, pero no tiene ningún efecto en el funcionamiento de la aplicación.</li>
 </ul>
-<p><img alt="Manifest" src="/Ejercicio1/imgs/Manifest.png" /></p>
+<p><img alt="Manifest" src="../imgs/Manifest.png" /></p>
 
 
 
