--- a/ScriptsGradle/index.html
+++ b/ScriptsGradle/index.html
@@ -469,7 +469,7 @@
     alias(libs.plugins.kotlin.compose)
 }
 </code></pre>
-<p><img alt="ImagenAndroid" src="/Ejercicio1/imgs/android.png" /></p>
+<p><img alt="ImagenAndroid" src="../imgs/android.png" /></p>
 
 
 
