--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
 
 <h1 id="bienvenido-al-primer-mkdocs-de-jordi">Bienvenido al primer Mkdocs de Jordi</h1>
-<p>Para ver el primer documento <a href="/Ejercicio1/docs/ScriptsGradle.md">Scripts de Gradle</a></p>
+<p>Para ver el primer documento <a href="ScriptsGradle/">Scripts de Gradle</a></p>
 
 
 
